# job-rag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  app.py  cli.py  docker-compose.pytest.yml  docker-compose.yml  pyproject.toml  requirements.txt
.beads/: metadata.json
.claude/: settings.json
.claude/agents/: describer.md  reviewer.md  (+1 more)
.cursor/: edit-checks.md
prompts/: agent-compress-instead-of-truncate.md  agent-job-discovery-searcher-filter.md  application_answer_system.txt  application_answer_user.txt  cover_letter_critic_system.txt  cover_letter_critic_user.txt  cover_letter_reviser_system.txt  cover_letter_reviser_user.txt  cover_letter_system.txt  cover_letter_user.txt  edit_pack_system.txt  edit_pack_user.txt  failed-extraction-tab.md  feature-a-confidence-validation-audit.md  feature-b-eval-suite.md  requirement_extract_confidence_system.txt  requirement_extract_confidence_user.txt  requirement_extract_system.txt  requirement_extract_user.txt
scripts/: export_job_fixtures.py  init_db.py  pdf_to_txt.py  run_evals.py
src/: __init__.py  application_answer_generator.py  audit.py  bookmarks.py  chunker.py  config.py  cover_letter_critic.py  cover_letter_generator.py  cover_letter_reviser.py  database.py  edit_pack_generator.py  embeddings.py  evidence_rag.py  job_fetcher.py  job_search.py  prompt_helpers.py  prompt_loader.py  requirement_extractor.py  style_rag.py  test_sample.py  workflow.py
tests/: conftest.py  test_bookmarks.py  test_cover_letter.py  test_evals.py  test_requirement_extractor.py
(+6 files in other folders)
