[tool.poetry]
name = "job-rag"
version = "0.1.0"
description = "Resume editor MVP using Evidence RAG and Style RAG"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
streamlit = "^1.39.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
openai = "^1.54.3"
anthropic = "^0.39.0"
playwright = "^1.48.0"
beautifulsoup4 = "^4.12.3"
pdfplumber = "^0.11.3"
lxml = "^5.3.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
tenacity = "^9.0.0"
tiktoken = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
